--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,6 +23,8 @@
     --moreinfo-width: 100%;
     
     --profilepic-width: 200px;
+    
+    --button-width: 90%; /* Ancho estándar para todos los botones */
 }
 
 /* Estilos base */
@@ -135,6 +137,21 @@ section.information div.moreinfo button#Networks {
 section.information div.moreinfo button#MyWork {
     border-top-right-radius: 8px;
 }
+
+button.files{
+    background-color: #131313;
+    color: #c0aff0;
+    font-size: 18px;
+    padding: 4px;
+    padding-left: 8px;
+    padding-right: 8px;
+    width: var(--button-width); /* Ancho estándar */
+    margin: auto; /* Centra el botón horizontalmente */
+}
+button.files:hover {
+    background-color: #c0aff0;
+    color: #131313;
+}
 section.information div.container p {
     text-align: justify;
     font-size: 18px;
@@ -179,8 +196,6 @@ section.information#about {
     cursor: pointer; /* Cambia el cursor al pasar sobre los íconos */
 }
 
-
-
 /* Responsividad para smartphones */
 @media screen and (max-width: 768px) {
     :root {
@@ -190,6 +205,7 @@ section.information#about {
         --information-min-width: 300px;
         --container-min-width: 300px; /* Se ajusta para no desbordar en pantallas pequeñas */
         --profilepic-width: 150px; /* Tamaño reducido para pantallas pequeñas */
+        --button-width: 100%; /* Botones ocupan todo el ancho disponible */
     }
 
     body {
@@ -213,4 +229,3 @@ section.information#about {
         height: var(--profilepic-width); /* Mantiene la proporción en dispositivos móviles */
     }
 }
-
